--- a/task-node/.env
+++ b/task-node/.env
@@ -2,6 +2,6 @@ DB_NAME="db_tasks"
 DB_USER="root"
 DB_PASSWORD="12345678"
 DB_HOST="localhost"
-DB_DIALECT="mysql"
-DB_PORT=3306
+DB_PORT="3306"
+PORT="3000"
 
